--- a/YMAPP/YMAPP/YMAPP.csproj
+++ b/YMAPP/YMAPP/YMAPP.csproj
@@ -17,7 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Views\ListNews.xaml">
+    <EmbeddedResource Update="Views\FriendPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\FriendsListPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
