--- a/YMAPP/YMAPP/YMAPP.csproj
+++ b/YMAPP/YMAPP/YMAPP.csproj
@@ -17,10 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Views\FriendPage.xaml">
+    <EmbeddedResource Update="Views\ItemNewsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\FriendsListPage.xaml">
+    <EmbeddedResource Update="Views\ListNewsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
